# legal-guard-PH

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  README.vi.md  alembic.ini  app.py  demo-by-chatgpt.md  docker-compose.ecs.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_db.py
.claude/: settings.json
docs/: DEVPOST.md  IMAGE-PROMPTS.md  OPEN-CORE.md  README.md  SUBMISSION.md  advisory-flow.md  architecture-diagram.en.md  architecture-diagram.md  architecture.en.md  architecture.md  blog-qwen-cloud.md  blog-qwen-cloud.vi.md  capacity.md  compliance-vn.md  conversation.md  crdb-features.md  data-model.md  deploy-aws.md  deploy-ecs-selfhosted.md  deploy-ecs.md  deploy-free.md  deployment.md  lawyer-mode.md  market-analysis.md  moat.md  model-portability.md  product-overview.md  security.md  slack-guide.md  slack-handbook.md
evaluation/: accuracy_eval.py  accuracy_golden.json  accuracy_report.json  colab_rerank_ab.ipynb  diagnose.py  fast_ab.py  fast_ab_report.json  feedback_to_golden.py  golden.json  golden_candidates_B1.json  golden_candidates_DN76.json  golden_candidates_draft.json  golden_to_review.py  integration_check.py  legal_eval.py  legal_golden.json  lookup_format_check.py  memory_eval.py  memory_live_eval.py  memory_threshold_calibrate.py  nli_eval.py  nli_report.json  obligation_eval.py  obligation_golden.json  obligation_report.json  ragas_eval.py  regression_golden.json  rerank_ab.py  rerank_ab_AITeamVN.json  rerank_ab_qwen.json  run_eval.py  zalo_ltr_eval.py  zalo_ltr_report.json
examples/: sample_contract_en.txt
frontend/: .env.example  (+7 more)
(+268 files in other folders)
